--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "mongoose": "^6.6.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19"
   }
 }
