--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "mongoose": "^6.6.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19"
+  },
+  "devDependencies": {
+    "eslint": "^8.23.1"
   }
 }
